# CodingPractice

./: .gitignore  AlmostPalindrome.java  AtbashCipher.java  CarryingTheDigits.java  CompleteTheWord.java  ConsChallenge.java  ConsecutiveNumbers.java  DifferenceCipher.java  FactorChain.java  Friday.py  FridgePoetry.java  MultiMap.java  README.md  StaircaseOfRecursion.java  ValidNest.py  VerifyCreditCard.java  letterPattern.java  multiplicativePersistence.java  phoneLetters2Numbers.java  waysToCheckPrimes.txt
c++/: .MakeBox.cpp.swp  .TruncatablePrimes.cpp.swp  BinarySearch  BinarySearch.cpp  CMakeLists.txt  ClimbingLeaderboard.cpp  MakeBox  MakeBox.cpp  NonDivisibleSubset  NonDivisibleSubset.cpp  QuickSort.cpp  SpecialArraySort  SpecialArraySort.cpp  TruncatablePrimes  takeaways.md
c++/MakeBox.dSYM/Contents/: Info.plist
c++/MakeBox.dSYM/Contents/Resources/DWARF/: MakeBox
c++/NewtonsMethod/: derivative.cpp  derivative.h  newtonsMethod.cpp  newtonsMethod.h  printer.h
c++/src/: AbsolutePermutation.cpp  BiggerGreater.cpp  BinarySearch.cpp  ClimbingLeaderboard.cpp  DiagonalDifference.cpp  LRUCache  LRUCache.cpp  MagicSquare.cpp  MakeBox.cpp  ModifiedKaprekarNumbers.cpp  NonDivisibleSubset.cpp  PE3.cpp  PE7.cpp  QuickSort.cpp  TruncatablePrimes.cpp
c++/src/LRUCache.dSYM/Contents/Resources/DWARF/: LRUCache
c++/src/NewtonsMethod/: main  main.cpp
java/: ArrayOfMultiples.java  BinaryTree.java  BookEnds.java  HappyNum.java  MultiMap.java  PalindromeNumber.java  Primes.java  RansomLetter.java  RecomposingStrings.java  RecursiveStringReverse.java  StringIncrementer.java  (+3 more)
(+28 files in other folders)
